Bug 1127511 - Make assignInitialShape public for removing the problematic friend declaration. r=luke

--HG--
extra : source : 1ec8e6fc506aa8c046ee5a4968df088282b55302